--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -5,5 +5,17 @@
     },
 
     "RabbitMQHost": "rabbitmq-clusterip-srv",
-    "RabbitMQPort": "5672"
+    "RabbitMQPort": "5672",
+    "Kestrel": {
+        "Endpoints": {
+            "Grpc": {
+                "Url": "http://phatforms-clusterip-src:666",
+                "Protocols": "Http2"
+            },
+            "webApi": {
+                "Url": "http://platforms-clusterip-srv:8080",
+                "Protocols": "Http1"
+            }
+        }
+    }
 }
