--- a/CommandsService/appsettings.Development.json
+++ b/CommandsService/appsettings.Development.json
@@ -1,10 +1,11 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "RabbitMQHost": "localhost",
-    "RabbitMQPort": "5672"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort": "5672",
+  "GrpcPlatform": "https://localhost:7021"
 }
